# Similarity-Intelligence-Platform

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  SETUP_SEARCH_SOURCES.md  USAGE.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  test_sanitization.py
alembic/: env.py
alembic/versions/: 002_add_users_table.py  20260102_0823_c4c0db214aae_initial_tables.py
app/: __init__.py  config.py  database.py  main.py
app/api/: auth.py  checks.py  dependencies.py  organizations.py  usage.py  users.py
app/auth/: api_key.py  dependencies.py  jwt.py
app/core/: article_fetcher.py  chunking.py  embeddings.py  similarity.py  vector_store.py  web_search.py  youtube.py
app/models/: __init__.py  api_key.py  check.py  match.py  organization.py  source.py  usage_log.py  user.py
app/schemas/: __init__.py  auth.py  check.py  organization.py  usage.py  user.py
app/tasks/: celery_app.py  similarity_check.py
app/utils/: error_handling.py  helpers.py  sanitization.py
docs/: API_TESTING_GUIDE.md
scripts/: check_search_setup.py  example_request.sh  init_db.py  seed_sample_articles.py  seed_test_data.py
src/api/: main.py
src/api/routes/: similarity.py
src/youtube_similarity/: __init__.py  config.py  models.py
src/youtube_similarity/core/: youtube_similarity_engine.py
src/youtube_similarity/services/: cache_service.py  embedding_service.py  (+5 more)
tests/: README.md  conftest.py  test_chunking.py  test_embeddings.py  test_keyword_extractor.py  test_similarity.py  test_text_utils.py  test_youtube.py
(+1 files in other folders)
